--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
 </head>
+
+<title>Luca's MIT Portafolio</title>
 <body>
     <img src="IMG_5609.jpg">
 </body>
