--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
 </head>
+<h1>Luca's MIT Portafolio</h1>
 
-<title>Luca's MIT Portafolio</title>
 <body>
+
     <img src="IMG_5609.jpg">
 </body>
 </html>
