--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
 </head>
-<h1>Luca's MIT Portafolio</h1>
+<h1 style="text-align: center">Luca's MIT Portafolio</h1>
 
 <body>
 
-    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;">
+    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;align-items: center">
 
 </body>
 </html>
