--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;align-items: center">
+    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto">
 
 </body>
 </html>
