--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background: aliceblue">
+
 <head>
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
