--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
+    <style>
+        .container{background-color: #ddd; padding: 25px;}
+        .content{width: 100px; height: 100px; background-color: red;}
+
+
+    </style>
 </head>
 <h1 style="text-align: center">Luca's MIT Portafolio</h1>
 
 <body>
 
+    <div class="container">
+
+        <div class="content"></div>
+    </div>
+
     <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto">
+
 
 </body>
 </html>
