--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <h1 style="text-align: center">Luca's MIT Portafolio</h1>
 
 <body>
+    <div id="animate-area"></div>
 
     <div class="container">
-
         <div class="content"></div>
     </div>
 
