--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         .container{background-color: #ddd; padding: 25px;}
         .content{width: 100px; height: 100px; background-color: red;}
@@ -14,7 +15,7 @@
 <h1 style="text-align: center">Luca's MIT Portafolio</h1>
 
 <body>
-    <div id="animate-area"></div>
+
 
     <div class="container">
         <div class="content"></div>
