--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 style="text-align: center">Luca's MIT Portafolio</h1>
 
 <body>
-
+    <div id="animate-area"></div>
 
     <div class="container">
         <div class="content"></div>
