--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
 
-    <div class="container">
-        <div class="content">
+    <div id="container">
+        <div id="content">
             <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto">
 
         </div>
