--- a/index.html
+++ b/index.html
@@ -10,19 +10,8 @@
 <h1 style="text-align: center">Luca's MIT Portafolio</h1>
 
 <body>
+    <div class="bg"></div>
 
-
-    <div id="container">
-        <div id="content">
-
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="content">
-
-        </div>
-    </div>
     <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto">
 
 
