--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-<h1 style="text-align: center">Luca's MIT Portafolio</h1>
+<div></div>
+<h1 style="text-align: center; margin:0; padding: 20px; font-family: 'Montserrat',sans-serif;font-size: 36px;">Luca's MIT Portafolio</h1>
 
-    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto">
+    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto; border: 5px solid #555;"; >
 
 
 </body>
