--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <div></div>
 <h1 style="text-align: center; margin:0; padding: 20px; font-family: 'Montserrat',sans-serif;font-size: 36px;">Luca's MIT Portafolio</h1>
 
-    <img src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto; border: 5px solid #555;"; >
-
+    <input type="image" src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto; border: 5px solid #555;" onclick="location.href='https://github.com/Luca4444';">
 
 </body>
 </html>
