--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="background: aliceblue">
+<link href='https://fonts.googleapis.com/css?family=Tourney' rel='stylesheet'>
 
 <head>
     <meta charset="UTF-8">
@@ -10,9 +11,9 @@
 
 <body>
 <div></div>
-<h1 style="text-align: center; margin:0; padding: 20px; font-family: 'Montserrat',sans-serif;font-size: 36px;">Luca's MIT Portafolio</h1>
-
-    <input type="image" src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto; border: 5px solid #555;" onclick="location.href='https://github.com/Luca4444';">
-
+<h1 style="text-align: center; margin:0; padding: 30px; font-family: 'Tourney',sans-serif;font-size:40px;">Luca's MIT Portafolio</h1>
+    <div class="container">
+        <input type="image" src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto; border: 5px solid #555;" onclick="location.href='https://github.com/Luca4444';">
+    </div>
 </body>
 </html>
