--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 <div></div>
-<h1 style="text-align: center; margin:0; padding: 30px; font-family: 'Tourney',sans-serif;font-size:40px;">Luca's MIT Portafolio</h1>
+<h1 style="">Luca's MIT Portafolio</h1>
     <div class="container">
-        <input type="image" src="IMG_5609.jpg" style="width: 432px; height: 576px;display: block; margin-left: auto; margin-right: auto; border: 5px solid #555;" onclick="location.href='https://github.com/Luca4444';">
+        <input class = "pimage" type="image" src="IMG_5609.jpg" style="" onclick="location.href='https://github.com/Luca4444';">
     </div>
 </body>
 </html>
