--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link href='https://fonts.googleapis.com/css?family=Tourney' rel='stylesheet'>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
+<meta content="width=device-width, initial-scale=1" name="viewport" />
 <head>
     <meta charset="UTF-8">
     <title>Luca's Portafolio</title>
