--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
                 <h1 id="sub2-title">Video Intro</h1>
             </div>
         </div>
+            <div class="container-video">
+                <iframe class="video w3-round"
+                        src="https://www.youtube.com/embed/FiP1puonuzI">
+                </iframe>
+            </div>
+
     </div>
 </div>
 
